@@ -224,6 +224,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001941: Queries are run twice
 -bug#0001954: Usage of PHP_SELF without basename in html.php (at least partly fixed)
 -bug#0001956: Attempts to Update Existing Tree Items Fails
+-bug#0001967: Reflected XSS on Cacti 0.8.7g
 -bug: accept "Connection refused" on TCP ping tests
 -bug: add missing row selection to graph preview
 -bug: script server throws "undefined variable" error when in debug mode
